--- a/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
+++ b/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
@@ -4,5 +4,5 @@
 	color="primary"
 	[class.mat-slide-toggle-bar-dark]="isDarkTheme"
 	[disabled]="disabled">
-		Slide me!
+		{{title}}
 </mat-slide-toggle>
