refactor: switch added, interfce renamed

--- a/frontend/src/app/libs/common-components/components/table/table.theme.scss
+++ b/frontend/src/app/libs/common-components/components/table/table.theme.scss
@@ -13,7 +13,7 @@
 	}
 
 	&--dark-theme {
-		background: $color-black;
+		background: $color-grey;
 	}
 	&--dark-theme .mat-header-cell{
 		color: $color-white;
