--- a/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
@@ -1,12 +1,12 @@
 <app-demo-group class="progress-demo" [title]="'Table'">
 	<div class="light-theme">
 		<app-demo-state [title]="'Mendeleev`s table'" [isDark]="false">
-			<app-table [tableConfig]="tableConfig" [data]="data" (toggled)="onToggle($event)" (checked)="onCheck($event)"></app-table>
+			<app-table [columnsConfig]="columnsConfig" [data]="data" (toggled)="onToggle($event)" (checked)="onCheck($event)"></app-table>
 		</app-demo-state>
 	</div>
 	<div class="dark-theme">
 		<app-demo-state [title]="'Mendeleev`s table in dark'" [isDark]="true">
-			<app-table [tableConfig]="tableConfig" [data]="data" [theme]="darkTheme"></app-table>
+			<app-table [columnsConfig]="columnsConfig" [data]="data" [theme]="darkTheme"></app-table>
 		</app-demo-state>
 	</div>
 </app-demo-group>
