--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -16,6 +16,7 @@ $color-mint: #EF5350;
 $color-purple: #7457E6;
 $color-coral: #FF8A65;
 $color-black: #212121;
+$color-grey: #373737;
 $color-white: #FFFFFF;
 $color-yellow: #FDD835;
 // gradients
@@ -24,9 +25,10 @@ $gradient-secondary: linear-gradient(180deg, rgba(54, 127, 246, 0) 0%, rgba(54, 
 $gradient-tertiary: linear-gradient(180deg, rgba(116, 87, 230, 0) 0%, rgba(116, 87, 230, 0.5) 100%), #FF7B52;
 $gradient-important-role: linear-gradient(180deg, rgba(54, 127, 246, 0) 0%, rgba(54, 127, 246, 0.5) 100%), #212121;
 // blacks
-$color-black-medium-emphasis: rgba(0, 0, 0, .6);
+$color-black-medium-emphasis: rgba(0, 0, 0, 0.6);
 $color-black-100: rgba($color-black, 100);
 $color-black-95: rgba($color-black, .95);
+$color-black-90: rgba($color-black, .90);
 $color-black-75: rgba($color-black, .75);
 $color-black-50: rgba($color-black, .50);
 $color-black-30: rgba($color-black, .30);
