--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -1,23 +1,23 @@
 <ng-container [ngSwitch]="type">
-	<button 
-			*ngSwitchCase="basicType" 
-			mat-button 
-			class="button button--basic" 
-			[class.button--dark-theme]="isDarkTheme"
-			[disabled]="disabled">
-		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
-	</button>
-	<button 
-			*ngSwitchCase="outlinedType" 
-			mat-stroked-button 
-			class="button button--outlined" 
+	<button
+			*ngSwitchCase="basicType"
+			mat-button
+			class="button button--basic"
 			[class.button--dark-theme]="isDarkTheme"
 			[disabled]="disabled">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
 	<button
-			*ngSwitchCase="flatType"  
-			mat-flat-button 
+			*ngSwitchCase="outlinedType"
+			mat-stroked-button
+			class="button button--outlined"
+			[class.button--dark-theme]="isDarkTheme"
+			[disabled]="disabled">
+		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
+	</button>
+	<button
+			*ngSwitchCase="flatType"
+			mat-flat-button
 			class="button button--flat"
 			[class.button--dark-theme]="isDarkTheme"
 			[disabled]="disabled">
@@ -26,5 +26,6 @@
 </ng-container>
 
 <ng-template #buttonText>
+	<mat-icon *ngIf="icon" class="button__icon">{{icon}}</mat-icon>
 	<ng-content></ng-content>
 </ng-template>
