--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -16,7 +16,8 @@ $color-mint: #EF5350;
 $color-purple: #7457E6;
 $color-coral: #FF8A65;
 $color-black: #212121;
-$color-grey: #373737;
+$color-gray: #373737;
+$color-gray-light: #424242;
 $color-white: #FFFFFF;
 $color-yellow: #FDD835;
 // gradients
@@ -40,6 +41,7 @@ $color-white-100: rgba($color-white, 100);
 $color-white-75: rgba($color-white, .75);
 $color-white-50: rgba($color-white, .50);
 $color-white-30: rgba($color-white, .30);
+$color-white-15: rgba($color-white, .15);
 $color-white-10: rgba($color-white, .10);
 $color-white-5: rgba($color-white, .05);
 // typography
