--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -11,4 +11,5 @@
 	<app-checkbox-demo></app-checkbox-demo>
 	<app-input-demo></app-input-demo>
 	<app-progress-bar-demo></app-progress-bar-demo>
+	<app-table-demo></app-table-demo>
 </div>
