feat:  search-input with hidden class and appropriate @Input()

--- a/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
@@ -9,6 +9,9 @@
 				[headerButtonText]="headerButtonText"
 				[headerButtonIcon]="'delete'"
 				[rowButtonIcon]="'delete'"
+				[searchInputIsHidden]="false"
+				[searchInputLabel]="'Find'"
+				[searchInputPlaceholder]="'Find it'"
 				(headerButtonClicked)="onHeaderButtonClick($event)"
 				(rowButtonClicked)="onRowButtonClick($event)">
 			</app-table>
@@ -23,6 +26,9 @@
 				[headerButtonText]="headerButtonText"
 				[headerButtonIcon]="'delete'"
 				[rowButtonIcon]="'delete'"
+				[searchInputIsHidden]="false"
+				[searchInputLabel]="'Find'"
+				[searchInputPlaceholder]="'Find it'"
 				(headerButtonClicked)="onHeaderButtonClick($event)"
 				(rowButtonClicked)="onRowButtonClick($event)">
 			</app-table>
