--- a/frontend/src/app/libs/common-components/components/search-input/search-input.component.html
+++ b/frontend/src/app/libs/common-components/components/search-input/search-input.component.html
@@ -1,1 +1,9 @@
-<p>search-input works!</p>
+<app-input
+	class="search-input"
+	[type]="'text'"
+	[theme]="theme"
+	[label]="label"
+	[placeholder]="placeholder"
+	[preIcon]="preIcon"
+	[class.search-input--hidden]="hidden">
+</app-input>
