--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -1,11 +1,13 @@
-<mat-form-field 
-	appearance="outline" 
+<mat-form-field
+	appearance="outline"
 	class="input"
 	[class.input--dark]="isDarkTheme">
 
+	<mat-icon matPrefix *ngIf="preIcon" class="input__pre-icon">{{preIcon}}</mat-icon>
+
 	<mat-label>{{label}}<span *ngIf="showRequiredSign">*</span></mat-label>
 	<input
-		matInput 
+		matInput
 		(input)="onValueInput($event.target.value)"
 		[formControl]="formControl"
 		[type]="inputType"
@@ -16,11 +18,11 @@
 	<mat-error *ngFor="let error of errorsArray">
 		{{error}}
 	</mat-error>
-	<button 
+	<button
 		*ngIf="isPassword"
-		mat-icon-button matSuffix 
-		(click)="secured = !secured" 
-		[attr.aria-label]="'Hide password'" 
+		mat-icon-button matSuffix
+		(click)="secured = !secured"
+		[attr.aria-label]="'Hide password'"
 		[attr.aria-pressed]="secured">
 		<mat-icon>{{icon}}</mat-icon>
 	</button>
