refactor: hidden property removed

--- a/frontend/src/app/libs/common-components/components/search-input/search-input.component.html
+++ b/frontend/src/app/libs/common-components/components/search-input/search-input.component.html
@@ -4,6 +4,5 @@
 	[theme]="theme"
 	[label]="label"
 	[placeholder]="placeholder"
-	[preIcon]="preIcon"
-	[class.search-input--hidden]="hidden">
+	[preIcon]="preIcon">
 </app-input>
