refactor: removed border bottom from last row in table

--- a/frontend/src/app/libs/common-components/components/table/table.theme.scss
+++ b/frontend/src/app/libs/common-components/components/table/table.theme.scss
@@ -51,7 +51,7 @@
 		}
 
 		&__row-button {
-			width :64px;
+			width: 64px;
 		}
 
 		&--dark-theme {
@@ -69,11 +69,17 @@
 				border-bottom-color: $color-white-30;
 			}
 			.mat-footer-cell {
-				color: $color-white;
+				color: red;
 				border-top-color: $color-white-30;
+				border-bottom: none;
 			}
 			.table-content__row--hover {
 				background-color: $color-gray-light;
+			}
+			.table-content__last-row {
+				.mat-cell {
+					border-bottom: none;
+				}
 			}
 		}
 	}
