Feat/search input (#84)
* feat: search-input init

* feat:  search-input with hidden class and appropriate @Input()

* refactor: tabs in spec

* refactor: hidden property removed

* refactor: removed border bottom from last row in table

Co-authored-by: Artur Makaranka <artur_makaranka@epam.com>

--- a/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
@@ -9,6 +9,8 @@
 				[headerButtonText]="headerButtonText"
 				[headerButtonIcon]="'delete'"
 				[rowButtonIcon]="'delete'"
+				[searchInputLabel]="'Find'"
+				[searchInputPlaceholder]="'Find it'"
 				(headerButtonClicked)="onHeaderButtonClick($event)"
 				(rowButtonClicked)="onRowButtonClick($event)">
 			</app-table>
@@ -23,6 +25,8 @@
 				[headerButtonText]="headerButtonText"
 				[headerButtonIcon]="'delete'"
 				[rowButtonIcon]="'delete'"
+				[searchInputLabel]="'Find'"
+				[searchInputPlaceholder]="'Find it'"
 				(headerButtonClicked)="onHeaderButtonClick($event)"
 				(rowButtonClicked)="onRowButtonClick($event)">
 			</app-table>
