feat: table added to adminrolepanel

--- a/frontend/src/app/libs/common-components/components/progress-bar/progress-bar.component.html
+++ b/frontend/src/app/libs/common-components/components/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar
-	mode="determinate" 
+	[mode]="mode"
 	[value]="progress"
 	[class.progress-bar--dark-theme]="isDarkTheme">
 </mat-progress-bar>
