--- a/frontend/src/app/libs/common-components-demo/components/progress-bar-demo/progress-bar-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/progress-bar-demo/progress-bar-demo.component.html
@@ -3,7 +3,7 @@
 		<app-demo-state [title]="'Progress 35%'" [isDark]="false">
 			<app-progress-bar
 				[progress]="35"
-				[mode] = "'determinate'"
+				[mode] = "mode"
 				[theme]=lightTheme>
 			</app-progress-bar>
 		</app-demo-state>
@@ -12,7 +12,7 @@
 		<app-demo-state [title]="'Progress 35%'" [isDark]="true">
 			<app-progress-bar
 				[progress]="35"
-				[mode] = "'determinate'"
+				[mode] = "mode"
 				[theme]=darkTheme>
 			</app-progress-bar>
 		</app-demo-state>
