--- a/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.html
+++ b/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Enter your email</mat-label>
         <input matInput placeholder="pat@example.com" type="email" formControlName="email" />
-        <mat-error *ngIf="emailInputErrorMessage">{{emailInputErrorMessage | translate}}</mat-error>
+        <mat-error *ngIf="emailInputErrorMessage">{{ emailInputErrorMessage | translate }}</mat-error>
       </mat-form-field>
     </div>
 
@@ -12,7 +12,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Enter your password</mat-label>
         <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" autocomplete="on" />
-        <mat-error *ngIf="passwordInputErrorMessage">{{ passwordInputErrorMessage }}</mat-error>
+        <mat-error *ngIf="passwordInputErrorMessage">{{ passwordInputErrorMessage | translate }}</mat-error>
         <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
           <mat-icon>{{ passwordIconVisibility }}</mat-icon>
         </button>
