--- a/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/table-demo/table-demo.component.html
@@ -21,6 +21,8 @@
 			<app-table
 				[columnsConfig]="columnsConfig"
 				[data]="data"
+				(toggled)="onToggle($event)"
+				(checked)="onCheck($event)"
 				[theme]="darkTheme"
 				[headerButtonText]="headerButtonText"
 				[headerButtonIcon]="'delete'"
