--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -1,24 +1,26 @@
 <header class="header">
-	<div class="header__logo-container">
+	<div class="header__logo-container" routerLink="/">
 		<img class="header__logo" src="assets/images/logo.svg">
 	</div>
-	<div class="header__admin-buttons" *ngIf="userService.isAdminUser">
-		<app-button 
+	<div class="header__admin-buttons" *ngIf="userService.user?.isAdmin">
+		<app-button
 				class="header__admin-button"
 				[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)"
-				[theme]="darkTheme" 
-				[disableRipple]="true" 
+				[theme]="darkTheme"
+				[disableRipple]="true"
 				[disableHover]="true"
-				(click)="onEventsClick()">
+				(click)="onEventsClick()"
+				routerLink="/">
 			{{"BUTTON.EVENTS" | translate}}
 		</app-button>
-		<app-button 
-				class="header__admin-button" 
+		<app-button
+				class="header__admin-button"
 				[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)"
 				[theme]="darkTheme"
-				[disableRipple]="true" 
+				[disableRipple]="true"
 				[disableHover]="true"
-				(click)="onAdministrationClick()">
+				(click)="onAdministrationClick()"
+				routerLink="/adminrolemanagement">
 			{{"BUTTON.ADMINISTRATION" | translate}}
 		</app-button>
 	</div>
