--- a/frontend/src/app/libs/container/components/header/header.component.scss
+++ b/frontend/src/app/libs/container/components/header/header.component.scss
@@ -3,7 +3,7 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   display: flex;
   align-items: center;
@@ -45,6 +45,10 @@
     background: #ffffff;
 
     user-select: none;
+  }
+
+  &__logo-container:hover {
+    cursor: pointer;
   }
 
   &__logo {
