refactor: button content indentions

--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -43,6 +43,8 @@
 
 			{{icon}}
 		</mat-icon>
-		<ng-content></ng-content>
+		<span class="button__label">
+			<ng-content></ng-content>
+		</span>
 	</div>
 </ng-template>
